example/kube/vk-cloud/deployment-vk-cloud.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: time-service
  template:
    metadata:
      labels:
        app: time-service
    spec:
      containers:
        - image: 146.185.242.65:5000/itmo-example-app:latest
          name: itmo-example-app
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
            limits:
              cpu: "15m"
      imagePullSecrets:
          - name: regcred
