example/kube/vk-cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-service
spec:
  selector:
    app: time-service
  ports:
    - name: http
      targetPort: 8080
      port: 8080
